Fixed Notes structure and Dark Mode

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   left: 400px;
   width: 600px;
   margin: 32px auto 50px auto;
-  background: #fff;
+  background: transparent;
   padding: 7px;
   border-radius: 7px;
   box-shadow: 0 1px 7px rgb(128, 128, 128);
@@ -28,7 +28,7 @@
   left: 400px;
   width: 600px;
   margin: 32px auto 50px auto;
-  background: #fff;
+  background: transparent;
   padding: 7px;
   border-radius: 7px;
   box-shadow: 0 1px 7px rgb(128, 128, 128);
@@ -76,7 +76,22 @@ form input {
   outline: none;
   border: none;
   font-size: 1rem;
+  font-weight: 550;
   resize: none;
+  background-color: transparent;
+}
+
+.light form input,
+.light form textArea {
+  color: black;
+}
+
+.dark form {
+  color: white;
+}
+
+.light form h3 {
+  color: black;
 }
 
 form textArea {
@@ -90,6 +105,7 @@ form textArea {
   resize: none;
   border: none;
   outline: none;
+  background-color: transparent;
 }
 
 .addIcon {
@@ -143,17 +159,33 @@ form textArea {
   background-color: rgba(191, 191, 191, 0.2);
 }
 
+.notes {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  grid-gap: 20px;
+  margin: 20px 10px;
+  max-width: 900px;
+  overflow-y: scroll;
+  margin-top: 220px;
+  padding-bottom: 150px;
+  max-height: 400px;
+  margin-top: 150px;
+}
+
+.dark .note,
+.dark .expanded,
+.dark .notExpanded {
+  box-shadow: 0 2px 5px rgb(16, 16, 16);
+}
+
 .note {
-  position: relative;
-  left: -300px;
-  background: #ffffff;
+  background-color: transparent;
   width: 240px;
   border-radius: 7px;
   box-shadow: 0 2px 5px rgb(128, 128, 128);
   padding: 10px;
   margin: 20px;
-  float: left;
-  margin-right: 0;
+  min-height: 50px;
 }
 
 .note h1 {
@@ -171,10 +203,22 @@ form textArea {
   word-wrap: break-word;
 }
 
-.note img {
-  position: relative;
-  float: right;
+.noteIcons img {
+  height: 15px;
+  width: 15px;
   cursor: pointer;
-  height: 20px;
-  width: 20px;
+}
+
+.note .noteIcons {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  justify-content: flex-end;
+  position: relative;
+  bottom: 0;
+  right: 0;
+}
+
+.note .archiveIcon {
+  padding-right: 10px;
 }
