--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,7 +5,7 @@
   left: 0;
   top: 10px;
   gap: 30px;
-  border-bottom: 1px solid lightgrey;
+  border-bottom: 0.5px solid lightgrey;
   width: 100%;
 }
 
@@ -14,7 +14,7 @@
   justify-content: flex-start;
   align-items: center;
   height: 56px;
-  background-color: #fff;
+  background-color: transparent;
 }
 
 .headerLeft {
@@ -37,6 +37,7 @@ h3 {
   width: 18px;
   margin: 0 20px;
   padding: 12px;
+  cursor: pointer;
 }
 
 .keepLogo {
@@ -46,7 +47,7 @@ h3 {
 }
 
 .searchLogo {
-  margin-top: 5px;
+  margin-top: 3px;
   height: 24px;
   width: 24px;
   padding: 0 20px;
@@ -66,6 +67,14 @@ h3 {
   max-height: 45px;
 }
 
+.dark .searchBar {
+  background-color: rgba(184, 184, 184, 0.878);
+}
+
+.dark .search {
+  color: black;
+}
+
 .search {
   background-color: transparent;
   border: none;
@@ -77,7 +86,7 @@ h3 {
   opacity: 0.5;
   resize: none;
   outline: none;
-  font-weight: 500;
+  font-weight: 530;
   color: black;
   opacity: 1;
 }
@@ -103,4 +112,12 @@ h3 {
 .listView {
   height: 22px;
   width: 22px;
+}
+
+.light {
+  background-color: #fff;
+}
+
+.dark {
+  background-color: #202124;
 }
